# smartF

./: .gitmodules  CMakeLists.txt
connect_stm32/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: core_events.h  core_manager.h  external_apis.h  inventory_manager.h  safe_queue.h
core/src/: core_manager.cpp  inventory_manager.cpp  main.cpp
cv_model/: CMakeLists.txt
cv_model/api/: cv_model_api.h
cv_model/include/: cv_model_manager.h  cv_model_status.h
cv_model/src/: cv_model_api.cpp  cv_model_manager.cpp
mqtt_message_sender/: CMakeLists.txt
mqtt_message_sender/api/: mqtt_message_sender_api.h
mqtt_message_sender/include/: message_sender_magager.h
mqtt_message_sender/src/: message_sender_magager.cpp  mqtt_message_sender_api.cpp
stm32_message_recever/: CMakeLists.txt
stm32_message_recever/api/: stm32_message_recever_api.h
stm32_message_recever/include/: message_recever_manager.h
stm32_message_recever/src/: message_recever_manager.cpp  stm32_message_recever_api.cpp
third_part/: CMakeLists.txt
third_part/mqtt/: CMakeLists.txt
third_part/opencv/: CMakeLists.txt
third_part/tensorrt/: CMakeLists.txt
tools/: build.sh  pull_code.sh  rebuild_run.sh
